0.99.2
- chinese translation was added (thanks to Tony Kimball)
- bugfix on XHTML validation for P4A_Field::getAsDate()

0.99.1
- the "new" icon was changes from "pencil" to "document"
- getAsMulticheckbox now rendered with checkbox + label
- a system was introduced to avoid browser's back/forward problems
- bugfix on P4A_Button, now l10n labels work again
- minor bugfixes and documentation changes

0.99.0
- slovak translation was added (thank to Tomas Lopasovsky)
- czech translation was completed (thanks to hanny)
- fixed a bug with non ordered P4A_DB_Source in P4A_Table
- PEAR was updated to 1.4.7
- minor bugfixes

0.45
- dutch translation added (thanks to fidodildo)
- fixed a bug on P4A_Table_Col of image type
- P4A_Table now use GD (if available) to display images thumbnails
- fixed an error on "am/pm" management in reverse formatting of time data
- TinyFck's filemanager is now restored

0.44
- TinyFCK was updated to 0.8
- locales were rebuilt with a new conversion engine, fixing some bugs

0.43
- phpThumb 1.6.2 was added in libraries
- if GD are installed image preview call phpThumb to generate thumbnails
- gettext like __("string") function has been added, alias of $p4a->i18n->messages->get("string")
- German translation completed (thanks to ibus)
- Romanian translation completed (thanks to Andrew and Giorgio Rimmer)
- P4A_Table now supports left/right alignment based on data type
- many improvements for handheld rendering
- some bugfixes on XHTML validation
- some bugfixes on print css
- minor bugfixes and beautifications

0.42
- bugfix on P4A_DB_Source::getFilters(), filtering now works with fields and data_fields
- French translation completed

0.41
- many translations added, look at http://p4a.sourceforge.net/translations
- a few translation strings were added (for P4A_Table)
- fixed some bugs with the i18n/l10n engine
- Portuguese translation completed (thanks to Tiago)
- Estonian translation completed (thanks to Eero)