@@ -234,13 +234,6 @@ a.link_button:hover {
 /*************/
 
 body {
-	SCROLLBAR-FACE-COLOR: #C6D3DE;
-	SCROLLBAR-HIGHLIGHT-COLOR: #C9CFD6;
-	SCROLLBAR-SHADOW-COLOR: #F7F7FF;
-	SCROLLBAR-3DLIGHT-COLOR: #F7F7FF;
-	SCROLLBAR-ARROW-COLOR: #F7F7FF;
-	SCROLLBAR-TRACK-COLOR: #C6D3DE;
-	SCROLLBAR-DARKSHADOW-COLOR: #DCEAF9;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	color: #4B718A;
